feat(background): 添加tabs权限并改进页面信息获取逻辑
重构background.ts中的消息监听逻辑，使用chrome.tabs.query获取当前活动标签页信息
移除未使用的vite-plugin-trae-solo-badge插件
在BookmarkModal中添加详细的日志记录和错误处理

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "storage",
     "activeTab",
-    "sidePanel"
+    "sidePanel",
+    "tabs"
   ],
   "side_panel": {
     "default_path": "index.html"
