--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AI工具分组管理器",
+  "name": "AIChatGroup - AI对话分组管理工具",
   "version": "1.0.0",
   "description": "为ChatGPT、Claude等AI工具提供分组管理功能的侧边栏插件",
   "permissions": [
@@ -13,19 +13,19 @@
     "default_path": "index.html"
   },
   "action": {
-    "default_title": "AI工具分组管理器",
+    "default_title": "AIChatGroup - AI对话分组管理工具",
     "default_icon": {
-      "16": "favicon.svg",
-      "32": "favicon.svg",
-      "48": "favicon.svg",
-      "128": "favicon.svg"
+      "16": "logo-16.png",
+      "32": "logo-32.png",
+      "48": "logo-48.png",
+      "128": "logo-128.png"
     }
   },
   "icons": {
-    "16": "favicon.svg",
-    "32": "favicon.svg",
-    "48": "favicon.svg",
-    "128": "favicon.svg"
+    "16": "logo-16.png",
+    "32": "logo-32.png",
+    "48": "logo-48.png",
+    "128": "logo-128.png"
   },
   "background": {
     "service_worker": "background.js"
