--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "AIChatGroup - AI对话分组管理工具",
   "version": "1.0.0",
-  "description": "为ChatGPT、Claude等AI工具提供分组管理功能的侧边栏插件",
+  "description": "为 ChatGPT、Claude 等 AI 工具提供分组管理。",
   "permissions": [
     "storage",
     "activeTab",
